crates/macro_tests/tests/fail/simple/method-without-receiver.stderr
error: Expected receiver as first argument in the signature
 --> tests/fail/simple/method-without-receiver.rs:4:10
  |
4 | #[derive(LuaProxy, Reflect, Clone)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `LuaProxy` (in Nightly builds, run with -Z macro-backtrace for more info)
